# IVsing

./: CMakeLists.txt  README.md  SWIG-README.md  datHi.py  datparser.i  datparser.py  datparser_wrap.cxx  h5utils.py  x86_64-w64-mingw32.toolchain.cmake
include/: ivs.h  utilities.h
src/: ivs.cpp  utilities.cpp
tests/: main.cpp
tests/archive/: CMakeLists.txt  h5old.cpp  headers.cpp  temp.cpp
